--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h1 class="fraunces hero-title">Data <span class="underline">tailored</span> to your needs.</h1>
             <button class="manrope hero-btn" href="">Learn more</button>
             <img class="hero-image" src="assets/image/illustration.png" alt="Iphone 11 pro max">
+            <img class="bottom-section-hero" src="assets/image/hero-bottom.png" alt="">
         </section>
         <section class="description-section">
             <ul class="ul-description">
@@ -39,6 +40,7 @@
                     <p class="manrope">Always affordable pricing that scales with your business. Get top-quality product data analytics services without hidden costs or unexpected fees.</p>
                 </li>
             </ul>
+            <img class="bottom-section-description" src="assets/image/description-bottom.png" alt="">
         </section>
         <section class="louis-section">
             <img class="image-louis" src="assets/image/louis.png" alt="Louis Graham">
@@ -52,9 +54,9 @@
     <footer>
         <img class="logo-footer" src="assets/image/Logo-black.png" alt="Workit">
         <ul class="ul-socials">
-            <li class="li-social"><img src="assets/image/socmed-facebook.png" alt="Facebook"></li>
-            <li class="li-social"><img src="assets/image/socmed-twitter.png" alt="Twitter"></li>
-            <li class="li-social"><img src="assets/image/socmed-instagram.png" alt="Instagram"></li>
+            <li class="li-social"><img src="assets/image/socmed-facebook.svg" alt="Facebook"></li>
+            <li class="li-social"><img src="assets/image/socmed-twitter.svg" alt="Twitter"></li>
+            <li class="li-social"><img src="assets/image/socmed-instagram.svg" alt="Instagram"></li>
         </ul>
     </footer>
 </body>
